@@ -10,7 +10,7 @@ issue description as described below.
 
 Alternatively, you can also send bug reports to the author via email at:
 
-    salewski@att.net
+    ads@salewski.email
 
 Be sure to indicate 'ads-github-tools' in the email subject line.
 
